<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.rlcr.epe1josemunoz.Calculonotas">


    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/EPR1"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/etepr1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:maxLength="2"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/EPE1"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/etepe1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:maxLength="2"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/EPR2"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/etepr2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:maxLength="2"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/EPE2"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/etepe2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:maxLength="2"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/EVAS"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/eteva1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:maxLength="2"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/eteva2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:maxLength="2"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/eteva3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:maxLength="2"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/eteva4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:maxLength="2"
        android:textSize="12sp" />
    <ImageButton
        android:id="@+id/button"
        android:layout_width="181dp"
        android:layout_height="60dp"
        android:contentDescription=""
        app:srcCompat="@drawable/button"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NOTA"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvresult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Resultado"
        android:textSize="14sp" />

    <ImageButton
        android:id="@+id/acerca1"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        app:srcCompat="@drawable/descarga"
        tools:ignore="ContentDescription" />

</LinearLayout>
